# qt_study

./: CMakeLists.txt  package.xml
include/: CMakeLists.txt
include.old/rgbd_viewer/: gl_widget.h  window.h
include/rgbd_viewer/: CMakeLists.txt  glwidget.h  logo.h  mainwindow.h  window.h
plasm/: openni2_viewer.py
src/: CMakeLists.txt  glwidget.cpp  logo.cpp  main.cpp  mainwindow.cpp  rgbd_viewer.cpp  viewer.cpp  window.cpp
src.old/: gl_widget.cpp  main.cpp  qtlogo.cpp  window.cpp
