<?xml version="1.0"?>
<package>
  <name>rgbd_viewer</name>
  <version>0.0.0</version>
  <description>The rgbd_viewer package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqglviewer-qt4-dev</build_depend>>
  <build_depend>libqt4-dev</build_depend>>
  <run_depend>roscpp</run_depend>
  <run_depend>libqglviewer-qt4-dev</run_depend>
  <run_depend>libqt4-dev</run_depend>

</package>
